# snake3

./: .gitignore  CMakeLists.txt  compile_shaders.sh  main.cpp
src/: snake3.cpp  snake3.hpp
src/drawing/: render.cpp  render.hpp  window.cpp  window.hpp
src/drawing/render/: camera.cpp  camera.hpp  i_renderable.hpp  queue_families.cpp  queue_families.hpp  render.cpp  render.hpp  swap_info.cpp  swap_info.hpp  uniform_buffer.hpp  vertex.cpp  vertex.hpp
src/drawing/render/shaders/: shader.frag  shader.vert
src/engine/: grid.cpp  grid.hpp  input.cpp  input.hpp
src/helpers/: dependable.hpp  loggable.hpp  settings.cpp  settings.hpp  settings.ipp  utils.hpp
src/utils/: singleton.hpp
